feat: add status column in search results
